@@ -1461,6 +1461,11 @@
             starting the exposure for a Tietz camera).</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>StartDelayPerFrame</TD>
+          <TD>Amount to add to the startup delay per frame when doing dose fractionation 
+            with a K2 camera; the default is 0.005 sec.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>AllowPostActions</TD>
           <TD>Set to 0 to disable Post-actions (scope actions during the readout and 
             processing time) for a camera where they are ordinarily available.&nbsp; The 
