@@ -3,6 +3,13 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/2/18: Fixed returned image not being reduced correctly when aligning K2
+images with binning 3 or 6.
+
+7/2/18: Added a small delay per frame to startup delay in K2 with dose
+fractionation.  Revised camera timing output and instructions to tell people
+just to use the minimum StartupDelay instead of changing the allowed minimum.
+
 6/29/18: Improved sychronization between acquisition and post-actions to
 prevent image shift from starting before end of exposure on K2.  Prevented
 post-actions from starting too soon on a shot after a K2 early return, which
